Add new content changes and work flow

--- a/grc/templates/one-login/identityEligibility.html
+++ b/grc/templates/one-login/identityEligibility.html
@@ -3,13 +3,41 @@
 {% import "govuk-design-system-templates/radios.html" as radios %}
 {% import "govuk-design-system-templates/text-input.html" as textInput %}
 {% import "govuk-design-system-templates/continue.html" as continue %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
 
 {% block title %}GOV.UK One Login Test{% endblock %}
+
+{% block backLink %}
+    {{ back_link.renderFor('oneLogin.start') }}
+{% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             {{ error_summary.renderFor(form) }}
+
+            <h1 class="govuk-heading-l">
+                Are you able to prove your identity online for example using a photo ID?
+            </h1>
+
+            <p class="govuk-body">
+                You can confirm your identity online using a photo ID such as a UK photocard driving license or UK passport. If you do not have a photo ID, you may be required to enter these ID details or confirm your identity with the GOV.UK ID Check app.
+                <a href="https://www.gov.uk/apply-gender-recognition-certificate" target="_blank" class="govuk-link">
+                    GOV.UK ID Check app
+                </a>.
+            </p>
+
+            <p class="govuk-body">
+                You may also need to complete your online identity check by answering further security questions.
+            </p>
+
+            <p class="govuk-body">
+                If you are unsure that you can confirm your identity online, select I cannot confirm my identity check online
+            </p>
+
+            <div class="govuk-inset-text">
+                If you are unable to confirm your identity online or have not previously confirmed your identity online using GOV.UK OneLogin, your application may take longer to process as this will need to be done once we have received your application.
+            </div>
 
             <form method="POST">
                 {{ form.csrf_token }}
@@ -17,10 +45,7 @@
                 {{ radios.renderFor(
                     form,
                     fieldName='identity_eligible',
-                    question=_("Are you able to prove your identity by use of xx? If you do not live in the United Kingdom do you have xxx??"),
-                    radiosOptions={
-                        'questionIsPageHeading': true
-                    }
+                    radiosOptions={}
                 ) }}
 
                 {{ continue.renderFor() }}
