--- a/grc/templates/one-login/start.html
+++ b/grc/templates/one-login/start.html
@@ -12,20 +12,24 @@
             {{ error_summary.renderFor(form) }}
 
             <h1 class="govuk-heading-l">
-                {{ _('Have you already started an application?') }}
+                Start or return to an application
             </h1>
 
             <p class="govuk-body">
-                {{ _('If this is your first time using this service, we will give you a reference number') }}.
-                {{ _('You will need this if you return to your application') }}.
+                You’ll need a
+                <a href="https://www.gov.uk/apply-gender-recognition-certificate" target="_blank" class="govuk-link">
+                    GOV.UK One Login
+                </a> to start a new application or return to your application that was started with GOV.UK One Login.
             </p>
             <p class="govuk-body">
-                {{ _('If you are returning to your application, you will need your application reference number') }}.
-                {{ _('If you have lost or forgotten it, you can start a new application') }}.
+                If this is your first time using this service, we will give you a reference number. You will need this if you return to your application.
+            </p>
+            <p class="govuk-body">
+                If you are returning to your application which was not started with GOV.UK One Login, you will also need to enter your email address and security code.
             </p>
 
             <div class="govuk-inset-text">
-                {{ _('Before you start, make sure you have read the guidance on') }}
+                Before you start a new application, make sure you have read the guidance on
                 <a href="https://www.gov.uk/apply-gender-recognition-certificate" target="_blank" class="govuk-link">
                     {{ _('applying for a Gender Recognition Certificate (opens in a new tab)') }}
                 </a>.
@@ -34,28 +38,11 @@
             <form method="POST">
                 {{ form.hidden_tag() }}
 
-                {% macro lostReferenceHtmlBlock() %}
-                    <p class="govuk-hint">
-                        {{ _('You will need to start a new application') }}
-                    </p>
-                {% endmacro %}
                 {{ radios.renderFor(
                     form,
-                    fieldName='has_reference',
+                    fieldName='application_choice',
                     radiosOptions={
-                        'questionIsPageHeading': true,
-                        'conditionalOptions': [
-                            ('HAS_REFERENCE',
-                            textInput.renderFor(
-                                form,
-                                fieldName='reference',
-                                textInputForOptions={
-                                    'labelOptions': { 'htmlOrText': _('Reference number') },
-                                    'classes': 'govuk-input--width-10'
-                                }
-                            )),
-                            ('LOST_REFERENCE', lostReferenceHtmlBlock())
-                        ]
+                        'questionIsPageHeading': true
                     }
                 ) }}
 
