Adjust user session to implement authorization levels

--- a/grc/templates/security-code.html
+++ b/grc/templates/security-code.html
@@ -7,7 +7,7 @@
 {% block title %}{{ _('Enter security code') }}{% endblock %}
 
 {% block backLink %}
-    {{ back.renderFor('startApplication.index') }}
+    {{ back.renderFor('startApplication.backFromSecurityCode') }}
 {% endblock %}
 
 {% block content %}
