--- a/grc/templates/start-application/reference-number.html
+++ b/grc/templates/start-application/reference-number.html
@@ -3,13 +3,11 @@
 
 {% block title %}{{ _('Your reference number') }}{% endblock %}
 
-{% block content %}
+{% block backLink %}
+    {{ back.renderFor('oneLogin.backFromReference') }}
+{% endblock %}
 
-    {% if session.get('user', {}).get('one_login_auth') == true %}
-        {% block backLink %}
-            {{ back.renderFor('oneLogin.identityEligibility') }}
-        {% endblock %}
-    {% endif %}
+{% block content %}
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
