(RST-7221) Implement logout

--- a/grc/templates/one-login/identityEligibility.html
+++ b/grc/templates/one-login/identityEligibility.html
@@ -8,7 +8,7 @@
 {% block title %}GOV.UK One Login Test{% endblock %}
 
 {% block backLink %}
-    {{ back_link.renderFor('oneLogin.backToStart') }}
+    {{ back_link.renderFor('oneLogin.backFromIdentity') }}
 {% endblock %}
 
 {% block content %}
