--- a/grc/templates/save-and-return/exit-application.html
+++ b/grc/templates/save-and-return/exit-application.html
@@ -21,7 +21,7 @@
 
             <p class="govuk-body govuk-!-margin-bottom-8">
                 {{ _('You will need your reference number to') }}
-                <a href="{{ url_for('startApplication.index') }}">
+                <a href="{{ url_for('oneLogin.start') }}">
                     {{ _('return to your application') }}.</a>
                 {{ _("Keep a record of it – it can't be recovered if you lose it.") }}
             </p>
