--- a/admin/templates/applications/view-application.html
+++ b/admin/templates/applications/view-application.html
@@ -149,10 +149,16 @@
                     Download application (PDF)
                 </a>
             </p>
-            <p class="govuk-body govuk-!-margin-bottom-8">
+            <p class="govuk-body">
                 <a href="{{ url_for('applications.attachments', reference_number=application_data.reference_number) }}"
                     target="_blank" class="govuk-link">
                     Download attachments (ZIP file)
+                </a>
+            </p>
+            <p class="govuk-body govuk-!-margin-bottom-8">
+                <a href="{{ url_for('applications.download_one_login_details', reference_number=application_data.reference_number) }}"
+                    target="_blank" class="govuk-link">
+                    Download {{ application_data.reference_number }} One Login details (PDF)
                 </a>
             </p>
 
