--- a/grc/templates/start-application/email-address.html
+++ b/grc/templates/start-application/email-address.html
@@ -7,7 +7,7 @@
 {% block title %}{{ _('Email address') }}{% endblock %}
 
 {% block backLink %}
-    {{ back_link.renderFor('oneLogin.referenceNumber') }}
+    {{ back_link.renderFor('startApplication.backFromEmail') }}
 {% endblock %}
 
 {% block content %}
