--- a/admin/templates/one-login/one-login-details-pdfkit.html
+++ b/admin/templates/one-login/one-login-details-pdfkit.html
@@ -12,8 +12,12 @@
     <h4 style="font-size: 16px;">Identity checking details</h4>
 
     <ul class="govuk-list govuk-list--bullet" style="font-size: 16px;">
-        <li>Applicant residency: {{ application_data.one_login_data.email }}</li>
-        <li>Photo ID from list provided:  {{ application_data.one_login_data.address.address_country }}</li>
+        <li>Applicant residency: {{ application_data.one_login_data.address.address_country }}</li>
+        {% if application_data.one_login_data.has_photo_id %}
+            <li>Photo ID from list provided: Yes</li>
+        {% else %}
+            <li>Photo ID from list provided: No</li>
+        {% endif %}
         <li>Last Name:  {{ application_data.one_login_data.last_name }}</li>
         <li>First Name:  {{ application_data.one_login_data.first_name }}</li>
         <li>Middle name(s):  {{ application_data.one_login_data.middle_names }}</li>
