One login work into staging (#330)
* Draft 1 of oneLogin example

* Revised POST

* Working first draft (with verify_aud set to false

* V2 draft with JAR

* V2 draft with JAR

* New app-grok3.py with optional authentication and identity proving

* Merge jwks work from RST-7290-jwks

* Working Identity proving

* One login implementation for authentication only

* One login prove identity route and logout

* Add class comments and fix logout

* Implement back channel logout

* Update python from 3.8 to 3.10

* Move server to redis and implement back channel logout

* Happy path for One Login in GRC

* Change phone validation to allow different formats of numbers such as +44, hyphens, 00, etc.

* reference number path

* Add new content changes and work flow

* Adjust user session to implement authorization levels

* (RST-7221) Implement logout

* (RST-7249) Implement PDF upload and download. Add One login data to application data class.

* Refactor logout so we logout of one login and redirect to confirmation page on succesfful checkout or help with payment.

* Fill out data into grc from identity proving if it does not exist yet

* Fix email page rerouting loop error

* (RST-7304) - Email mismatch to application email

* Error fixes: Fix pdf document to display correct information. Only remove reference number from session on unauthorised pages

* (RST-7305) - Email mismatch to application email for one login

* Refactor logout redirect urls

* One login development environment integration + key storage + jwks  (#327)

- Integrates one login into the development environment

- Integrate JWKS endpoint instead of using public key pem

- Store private key pem file in kubernetes storage and use this key

* Add one login vars, matt sellings ip address to public app, and redis session

---------

Co-authored-by: Mark Butler <mgb777@outlook.com>

--- a/grc/templates/start-application/reference-number.html
+++ b/grc/templates/start-application/reference-number.html
@@ -4,10 +4,11 @@
 {% block title %}{{ _('Your reference number') }}{% endblock %}
 
 {% block backLink %}
-    {{ back.renderFor('startApplication.backToIsFirstVisit') }}
+    {{ back.renderFor('oneLogin.backFromReference') }}
 {% endblock %}
 
 {% block content %}
+
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
