Implement welsh translations for RST-7219

--- a/grc/templates/one-login/referenceNumber.html
+++ b/grc/templates/one-login/referenceNumber.html
@@ -27,7 +27,7 @@
                 {{ radios.renderFor(
                     form,
                     fieldName='has_reference',
-                    question=_("What is your application reference number?"),
+                    question=_("Application reference number"),
                     radiosOptions={
                         'questionIsPageHeading': true,
                         'conditionalOptions': [
