--- a/grc/templates/start-application/email-address.html
+++ b/grc/templates/start-application/email-address.html
@@ -21,7 +21,7 @@
             </h1>
 
             <p class="govuk-body">
-                You need to provide an email address to continue your application so we can save your progress and you can exit and return to your application later.
+                {{ _('You need to provide an email address to continue your application so we can save your progress and you can exit and return to your application later.') }}
             </p>
 
             <form method="POST">
