--- a/grc/templates/one-login/start.html
+++ b/grc/templates/one-login/start.html
@@ -12,27 +12,21 @@
             {{ error_summary.renderFor(form) }}
 
             <h1 class="govuk-heading-l">
-                Start or return to an application
+                {{ _('Start or return to an application') }}
             </h1>
 
             <p class="govuk-body">
-                You’ll need a
-                <a href="https://www.gov.uk/apply-gender-recognition-certificate" target="_blank" class="govuk-link">
-                    GOV.UK One Login
-                </a> to start a new application or return to your application that was started with GOV.UK One Login.
+              {{ _("You’ll need a <a href=\"https://www.gov.uk/using-your-gov-uk-one-login/services\" target=\"_blank\" class=\"govuk-link\">GOV.UK One Login</a> to start a new application or return to your application that was started with GOV.UK One Login.") | safe }}
             </p>
             <p class="govuk-body">
-                If this is your first time using this service, we will give you a reference number. You will need this if you return to your application.
+                {{ _("If this is your first time using this service, we will give you a reference number. You will need this if you return to your application.") }}
             </p>
             <p class="govuk-body">
-                If you are returning to your application which was not started with GOV.UK One Login, you will also need to enter your email address and security code.
+                {{ _("If you are returning to your application which was not started with GOV.UK One Login, you will also need to enter your email address and security code.") }}
             </p>
 
             <div class="govuk-inset-text">
-                Before you start a new application, make sure you have read the guidance on
-                <a href="https://www.gov.uk/apply-gender-recognition-certificate" target="_blank" class="govuk-link">
-                    {{ _('applying for a Gender Recognition Certificate (opens in a new tab)') }}
-                </a>.
+                {{ _("Before you start a new application, make sure you have read the guidance on <a href='https://www.gov.uk/apply-gender-recognition-certificate' target='_blank' class='govuk-link'>applying for a Gender Recognition Certificate (opens in a new tab)</a>.") }}
             </div>
 
             <form method="POST">
@@ -40,7 +34,7 @@
 
                 {{ radios.renderFor(
                     form,
-                    fieldName='application_choice',
+                    fieldName='new_application',
                     radiosOptions={
                         'questionIsPageHeading': true
                     }
