Implement welsh translations for RST-7317 and do not allow access to Submitted applications

--- a/grc/templates/start-application/application-already-submitted.html
+++ b/grc/templates/start-application/application-already-submitted.html
@@ -8,7 +8,7 @@
 {% block title %}{{ _('This application has already been submitted') }}{% endblock %}
 
 {% block backLink %}
-    {{ back.renderFor('startApplication.isFirstVisit') }}
+    {{ back.renderFor('oneLogin.referenceNumber') }}
 {% endblock %}
 
 {% block content %}
