--- a/grc/templates/start-application/application-anonymised.html
+++ b/grc/templates/start-application/application-anonymised.html
@@ -6,7 +6,7 @@
 {% block title %}This application cannot be accessed{% endblock %}
 
 {% block backLink %}
-    <a href="{{ url_for('startApplication.isFirstVisit') }}"
+    <a href="{{ url_for('oneLogin.referenceNumber') }}"
        class="govuk-back-link">
         Back
     </a>
