--- a/grc/templates/base.html
+++ b/grc/templates/base.html
@@ -130,13 +130,13 @@
                         <div class="govuk-grid-column-two-thirds">
                             <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
                                 <h2 id="error-summary-title" class="govuk-error-summary__title">
-                                    There is a problem
+                                    {{ _('There is a problem') }}
                                 </h2>
                                 <div class="govuk-error-summary__body">
                                     <ul class="govuk-list govuk-error-summary__list">
                                         {%- for msg in messages %}
                                             <li>
-                                                <p class="govuk-body">{{ msg }}</p>
+                                                <p class="govuk-body">{{ _(msg) }}</p>
                                             </li>
                                         {% endfor -%}
                                     </ul>
