Add upload birth or adoption certificate section

--- a/grc/templates/upload/_upload-files-section.html
+++ b/grc/templates/upload/_upload-files-section.html
@@ -172,7 +172,7 @@
 <div class="govuk-warning-text govuk-!-margin-bottom-4 govuk-!-padding-0">
     <span class="govuk-warning-text__icon govuk-!-margin-top-1" aria-hidden="true">!</span>
     <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">{{ _('Warning') }}</span>
+        <span class="govuk-visually-hidden">{{ _('Warning') }}</span>
         {{ _('We will only accept clear images of full pages.') }}
         {{ _('If you take a photograph, please make sure all 4 corners of each page are visible.') }}
     </strong>
