--- a/grc/templates/submit-and-pay/check-your-answers.html
+++ b/grc/templates/submit-and-pay/check-your-answers.html
@@ -430,6 +430,15 @@
                     changeLinkUrl=url_for('upload.uploadInfoPage', section_url='statutory-declarations'),
                     value=(uploadedDocumentsList(application_data.uploads_data.statutory_declarations, 'statutoryDeclarations'))
                 ) }}
+
+                {% if application_data.need_birth_or_adoption_certificate %}
+                    {{ summary_list_item.render(
+                        title=_('Your birth or adoption certificate'),
+                        changeLinkHiddenText='the documents you have uploaded as evidence of birth or adoption certificate',
+                        changeLinkUrl=url_for('upload.uploadInfoPage', section_url='birth-or-adoption-certificate'),
+                        value=(uploadedDocumentsList(application_data.uploads_data.birth_or_adoption_certificates, 'birthOrAdoptionCertificate'))
+                    ) }}
+                {% endif %}
             </dl>
 
             <h2 class="govuk-heading-m">
