--- a/admin/templates/applications/view-application.html
+++ b/admin/templates/applications/view-application.html
@@ -637,6 +637,22 @@
                         value=(uploadedDocumentsList(application_data.uploads_data.statutory_declarations)),
                         noCopyButton=True
                     ) }}
+
+                    {% if application_data.need_medical_reports %}
+                        {{ summary_list_item(
+                            title='Your medical reports',
+                            value=(uploadedDocumentsList(application_data.uploads_data.medical_reports)),
+                            noCopyButton=True
+                        ) }}
+                    {% endif %}
+
+                    {% if application_data.need_birth_or_adoption_certificate %}
+                        {{ summary_list_item(
+                            title='Your birth or adoption certificate',
+                            value=(uploadedDocumentsList(application_data.uploads_data.birth_or_adoption_certificates)),
+                            noCopyButton=True
+                        ) }}
+                    {% endif %}
                 </tbody>
             </table>
 
@@ -647,7 +663,7 @@
                 <tbody class="govuk-table__body">
                     {{ summary_list_item(
                         title='Your original or a certified copy (opens in a new tab) of your full birth or adoption certificate',
-                        value='Yes'
+                        value=('No' if application_data.one_login_data.identity_verified else 'Yes')
                     ) }}
 
                     {{ summary_list_item(
