--- a/grc/templates/applications/application_user-pdfkit.html
+++ b/grc/templates/applications/application_user-pdfkit.html
@@ -137,7 +137,9 @@
 
     <h4 class="govuk-heading-m">Documents to post</h4>
     <ul class="govuk-list govuk-list--bullet" style="font-size: 12px;">
-        <li>your original or a certified copy of your full birth or adoption certificate</li>
+        {% if not application_data.one_login_data.identity_verified %}
+            <li>your original or a certified copy of your full birth or adoption certificate</li>
+        {% endif %}
         {% if application_data.submit_and_pay_data.is_using_ex160_form %}
             <li>an EX160 form</li>
         {% endif %}
