--- a/grc/templates/document-checker/your-documents.html
+++ b/grc/templates/document-checker/your-documents.html
@@ -338,7 +338,7 @@
                 {{ _('Documents to send by post') }}
             </h2>
             <p class="govuk-body">
-                {{ _('You should post the following documents after you have submitted your application') }}.
+                {{ _('If you’re unable to confirm your identity online, you should post the following documents after you have submitted your application.') }}
             </p>
 
             <details class="govuk-details" data-module="govuk-details">
