--- a/grc/templates/one-login/referenceNumber.html
+++ b/grc/templates/one-login/referenceNumber.html
@@ -9,7 +9,7 @@
     {{ back_link.renderFor('oneLogin.start') }}
 {% endblock %}
 
-{% block title %}GOV.UK One Login Test{% endblock %}
+{% block title %}{{ _("Application reference number") }}{% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
