--- a/grc/templates/one-login/start.html
+++ b/grc/templates/one-login/start.html
@@ -4,7 +4,7 @@
 {% import "govuk-design-system-templates/text-input.html" as textInput %}
 {% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}GOV.UK One Login Test{% endblock %}
+{% block title %}{{ _('Start or return to an application') }}{% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
