Change email-address.html to have new text and remove old text. Add welsh translation for new text.

--- a/grc/templates/start-application/email-address.html
+++ b/grc/templates/start-application/email-address.html
@@ -16,16 +16,7 @@
             </h1>
 
             <p class="govuk-body">
-                {{ _('You need to provide an email address to apply for a Gender Recognition Certificate using this service') }}.
-                {{ _('This is so we can save your progress and you can return to your application later') }}.
-            </p>
-            <p class="govuk-body">
-                {{ _('If this is your first time using this service, we will give you a reference number') }}.
-                {{ _('You will need this if you return to your application') }}.
-            </p>
-            <p class="govuk-body">
-                {{ _('If you are returning to your application, you will need your application reference number') }}.
-                {{ _('If you have lost or forgotten it, you can start a new application') }}.
+                {{ _('This is some new text') }}.
             </p>
             
             <div class="govuk-inset-text">
