--- a/grc/templates/birth-registration/fathers-name.html
+++ b/grc/templates/birth-registration/fathers-name.html
@@ -4,7 +4,7 @@
 {% import "govuk-design-system-templates/back_link.html" as back_link %}
 {% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}{{ _("What is your father's name?") }}{% endblock %}
+{% block title %}{{ _("What is your second parent's name?") }}{% endblock %}
 
 {% block backLink %}
     {{ back_link.renderForRawURL(back) }}
@@ -23,7 +23,7 @@
                     <fieldset class="govuk-fieldset">
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                             <h1 class="govuk-fieldset__heading">
-                                {{ _("What is your father's name as listed on your birth or adoption certificate?") }}
+                                {{ _("What is your second parent's name as listed on your birth or adoption certificate?") }}
                             </h1>
                         </legend>
 
