RST-7383 update hint text on upload page + welsh translation

--- a/grc/templates/upload/_upload-files-section.html
+++ b/grc/templates/upload/_upload-files-section.html
@@ -84,7 +84,7 @@
                         {{ _('Upload files') }}
                     </label>
                     <div id="documents-hint" class="govuk-hint">
-                        {{ _('The files must be a JPG, BMP, PNG, TIF or PDF and be smaller than 10MB') }}
+                        {{ _('The files must be a JPG, BMP, PNG, TIF or PDF and smaller than 10MB. The file name must not contain special characters such as: \ / : * ? “ < > |') }}
                     </div>
                     {% if extra_upload_hint %}
                         <div id="extra-upload-hint">
