RST-7290 test text

--- a/grc/templates/one-login/start.html
+++ b/grc/templates/one-login/start.html
@@ -11,6 +11,8 @@
         <div class="govuk-grid-column-two-thirds">
             {{ error_summary.renderFor(form) }}
 
+            <p>Test text</p>
+
             <h1 class="govuk-heading-l">
                 {{ _('Start or return to an application') }}
             </h1>
